@startuml
!theme plain

' Entités
entity Utilisateur {
    id : INT
    nom : VARCHAR
    prenom : VARCHAR
    email : VARCHAR[254]
    motDePasse : VARCHAR
    telephone : VARCHAR[20]
    dateInscription : DATETIME
    statut : ENUM
}

entity Profil {
    id : INT
    utilisateur_idUtilisateur : INT
    bio : TEXT
    photo : VARCHAR
}

entity Trajet {
    id : INT
    conducteur_idUtilisateur : INT
    depart : VARCHAR
    arrivee : VARCHAR
    dateHeureDepart : DATETIME
    nombrePlaces : INT
    prix : FLOAT
    statut : ENUM
}

entity Reservation {
    id : INT
    trajet_idTrajet : INT
    passager_idUtilisateur : INT
    nombrePlacesReservees : INT
    date_reservation : DATETIME
    statut : ENUM
}

entity Vehicule {
    id : INT
    conducteur_idUtilisateur : INT
    marque : VARCHAR
    modele : VARCHAR
    couleur : VARCHAR
    immatriculation : VARCHAR
    annee : INT
    use : INT
}

entity Paiement {
    id : INT
    reservation_idReservation : INT
    utilisateur_idUtilisateur : INT  ' Ajout de l'identifiant de l'utilisateur qui a payé
    montant : FLOAT
    dateHeure : DATETIME
    methode : ENUM
    statut : ENUM
}

entity Avis {
    id : INT
    reservation_idReservation : INT
    utilisateur_idUtilisateur : INT
    note : INT
    commentaire : TEXT
    dateHeure : DATETIME
}

entity Message {
    id : INT
    expediteur_idUtilisateur : INT
    destinataire_idUtilisateur : INT
    contenu : TEXT
    dateHeureEnvoi : DATETIME
    lu : BOOLEAN
}

entity Session {
    id : INT
    user_email : CHAR[254]
    token : CHAR[254]
    dateDebutSession : DATETIME
    dateFinSession : DATETIME
    actif : CHAR[1]
}

' Relations
Utilisateur ||--o{ Profil : ""
Utilisateur ||--o{ Trajet : "Conducteur"
Utilisateur ||--o{ Reservation : "Passager"
Utilisateur ||--o{ Vehicule : "Conducteur"
Reservation ||--o{ Paiement : ""
Utilisateur ||--o{ Paiement : "Payeur"
Reservation ||--o{ Avis : ""
Utilisateur ||--o{ Avis : "Posteur"
Utilisateur ||--o{ Message : "Expediteur"
Utilisateur ||--o{ Message : "Destinataire"
Utilisateur ||--o{ Session : ""

@enduml